Changes for 1.4.6:

 - [ZBX-389] added escaping in SQL statement in DBupdate_graph (Sasha)
 - [ZBX-286] fixed possible server crash on some platforms (Sasha)
 - [ZBX-167] fixed typo in triggers update function (Artem)
 - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
 - [ZBX-386] fixed possible agent crash in processing of active checks (Sasha)
 - [ZBX-379] added error checking for accept on server side (Sasha) 
 - [ZBX-365] added support of long process names for proc.num and proc.mem, Linux 2.6 (Sasha)
 - [ZBX-78] fixed detection of net-snmp libs (Alexei)
 - [ZBX-362] added mass template linkage to hosts, mod by sergio.cricca (Artem)
 - [ZBX-361] fixed possible "division by zero" in Monitoring/Triggers screen (Sasha)
 - [ZBX-360] fixed possible warning messages under Oracle while updating items (Sasha)
 - [ZBX-357] fixed problem with clearing error message for activated items (Sasha)
 - [ZBX-339] fixes problem in frontend with clearing history for text items (Sasha) 
 - [ZBX-44] added timeout handler for processing net.tcp.* items (Sasha)
 - [ZBX-356] fixed possible server crash for non *log() items with type 'log' (Sasha)
 - [ZBX-354] added support of new parameter sec|#num for str(),regexp() and iregexp() (Sasha)
 - [ZBX-351] added support of floating point values w/o zero (.12) (Sasha)
 - [ZBX-350] fixed processing in_condition under Oracle (Sasha)
 - [ZBX-348] fixed incorrect processing of large integer values for {ITEM.LASTVALUE} (Alexei)
 - [ZBX-337] added Oracle upgrade scripts (Sasha) 
 - [ZBX-301] fixes some typos (Artem)
 - [ZBX-310] fixes for PGSQL (Artem)
 - [ZBX-336] fixed vtext.php (Artem)

Changes for 1.4.5:

 - [ZBX-295] fixed processing of null values under Oracle. Thanks to Max Lapan. (Sasha)
 - [ZBX-340] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-294,ZBX-296] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-343] fixed possible hang of server trapper process (Alexei)